# Imgenie-airflow

./: .env-sample  .gitignore  .gitmodules  README.md  pyproject.toml
dags/: update_data_and_model_dag.py
data/preprocess/: tags.csv
ml/: run_finetune.py  run_indexing.py  run_preprocessing.py
ml/configs/finetune/: config.yaml
ml/configs/finetune/data/: default.yaml
ml/configs/finetune/path/: default.yaml
ml/configs/indexing/: config.yaml
ml/configs/preprocessing/: config.yaml
ml/src/: preprocess.py  trainer.py  utils.py
ml/src/data/: datamodule.py
ml/src/model/: tag_classifier.py
