[tool.poetry]
name = "imgenie-airflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "imgenie_airflow"}]

[tool.poetry.dependencies]
python = "~3.10.3"
apache-airflow = "^2.7.1"
werkzeug = "2.2"
async-generator = "1.10"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
blinker = "1.6.2"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
emoji = "2.5.1"
exceptiongroup = "1.1.1"
h11 = "0.14.0"
idna = "3.4"
mongoengine = "0.27.0"
mongomock = "4.1.2"
outcome = "1.2.0"
pycparser = "2.21"
pydantic = "2.1.1"
pydantic-settings = "2.0.2"
pandas = "2.0.2"
pysocks = "1.7.1"
pytest = "7.4.0"
requests = "2.31.0"
selenium = "4.12.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.4.1"
spotipy = "2.23.0"
tqdm = "4.65.0"
trio = "0.22.0"
trio-websocket = "0.10.3"
urllib3 = "2.0.3"
wsproto = "1.2.0"
hydra-core = "1.3.2"
lightning = "^2.1.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
pillow = "^10.0.1"
torchvision = "^0.16.0"
albumentations = "^1.3.1"
transformers = "^4.34.0"
datasets = "^2.14.5"
faiss-cpu = "^1.7.4"
wandb = "^0.15.12"
python-dotenv = "^1.0.0"
pytesseract = "^0.3.10"
huggingface-hub = "0.16.4"
scikit-image = "^0.22.0"
opencv-python-headless = "^4.8.1.78"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''